Changed some style on the about page. An then aslo changed the title of pages to the correct name.

--- a/Menu_dinner.html
+++ b/Menu_dinner.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/product.css">
 	<link rel="stylesheet" href="css/main.css">
-  <title>Hello, world!</title>
+  <title>Menu</title>
 
   </head>
   <body>
@@ -68,8 +68,6 @@
 
 
 
-
-
 <div class="navtogglemenu">
     <nav>
         <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
@@ -82,7 +80,7 @@
 <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
         <div class="row">
-            <div class="col-sm"><img class="img-fluid" src="img/DinnerPhotoTall.jpg" alt="" style="padding-left:24px;"></div>
+            <div class="col-sm"><img class="img-fluid" src="img/DinnerPhotoTall.jpg" alt="d" style="padding-left:24px;"></div>
                 <div class="col-sm">
                     <div class="MenuSection">
                             <ul class="list-unstyled">
