--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/about.css">
-  <title>Hello, world!</title>
+  <title>About</title>
 
   </head>
   <body>
@@ -57,21 +57,25 @@
 
 
 
-<div class="container-flud-par">
+<div class="container-fluid-par">
   <div class="row">
       <div class="col-md">
      <!--Start of Left image-->
-          <img src="img/sanders1.jpg.optimal.jpg">
+          <img class="aboutimg" src="img/sanders1.jpg.optimal.jpg" style="width: 90%;">
     <!--End of left image-->
       </div>
 
       <div class="col-sm">
-        <p class="par">At Alagia Ristorante, we offer Chef Shea Gallante’s interpretation of Italian cuisine in New York at Lincoln Center. Our philosophy is simple: to source the best local ingredients and prepare them with authentic Italian methods and spirit. We rely on local farmers and purveyors along with weekly visits to our neighborhood Tucker Square Greenmarket, while importing irreplaceable items from Italy. We honor the Italian culinary tradition of making our own fresh pastas, grissini, and focaccia. Desserts, by Richard Capizzi, are beautiful renditions of Italy’s classics: light, lush and irresistible. A focus and commitment to freshness and respect for every ingredient is paramount in our daily life.
+         <ul class="list-unstyled">
+          <li class="par">At Alagia Ristorante, we offer Chef Shea Gallante’s interpretation of Italian cuisine in New York at Lincoln Center. Our philosophy is simple: to source the best local ingredients and prepare them with authentic Italian methods and spirit. We rely on local farmers and purveyors along with weekly visits to our neighborhood Tucker Square Greenmarket, while importing irreplaceable items from Italy. We honor the Italian culinary tradition of making our own fresh pastas, grissini, and focaccia. Desserts, by Richard Capizzi, are beautiful renditions of Italy’s classics: light, lush and irresistible. A focus and commitment to freshness and respect for every ingredient is paramount in our daily life.</li>
+            <li style="font-size: 20px; padding-top: 10px;">While our location beside Lincoln Center’s reflecting pool and Henry Moore sculpture is exquisite, with panoramic views and a grass lawn roof, the heart of our restaurant is the central open kitchen. The stunning glass pavilion building that houses the restaurant was designed by Diller, Scofidio + Renfro. Our Negroni Bar and Prosecco Bar have rotating selections. We offer 350 wines on the list, constantly evolving and focused on small producers.
+            Our role in the Lincoln Center community is to provide a gracious fine dining experience that reflects the best of both Italy and New York. We invite you to join us, share a meal and a glass of wine at our table
+            </li>
 
-While our location beside Lincoln Center’s reflecting pool and Henry Moore sculpture is exquisite, with panoramic views and a grass lawn roof, the heart of our restaurant is the central open kitchen. The stunning glass pavilion building that houses the restaurant was designed by Diller, Scofidio + Renfro. Our Negroni Bar and Prosecco Bar have rotating selections. We offer 350 wines on the list, constantly evolving and focused on small producers.
 
-Our role in the Lincoln Center community is to provide a gracious fine dining experience that reflects the best of both Italy and New York. We invite you to join us, share a meal and a glass of wine at our table </p>
-      </div>
+         </ul>
+
+
   </div>
 </div>
 
