--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/product.css">
 	<link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/contact.css">
-  <title>Hello, world!</title>
+  <title>Contact</title>
 
   </head>
   <body>
