--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/product.css">
 	<link rel="stylesheet" href="css/main.css">
-  <title>Hello, world!</title>
+  <title>Home</title>
 
   </head>
   <body>
